@@ -1,7 +1,6 @@
 package org.uniprot.store.spark.indexer.uniprot.converter;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 import java.util.*;
 
@@ -55,6 +54,8 @@ class UniProtKBEntryFeatureConverterTest {
         converter.convertFeature(features, document);
 
         assertTrue(document.featuresMap.containsKey("ft_chain"));
+        assertFalse(document.featuresMap.containsKey("ft_chain_exp"));
+        assertFalse(document.evidenceExperimental);
         List<String> chainValue =
                 Arrays.asList(
                         "CHAIN",
@@ -93,7 +94,9 @@ class UniProtKBEntryFeatureConverterTest {
     void convertBindingFeature() {
         UniProtDocument document = new UniProtDocument();
 
-        List<UniProtKBFeature> features = Collections.singletonList(createBindingFeature());
+        List<Evidence> evidences = List.of(createEvidence(EvidenceCode.ECO_0000255));
+        List<UniProtKBFeature> features =
+                Collections.singletonList(createBindingFeature("description", evidences));
         UniProtEntryFeatureConverter converter = new UniProtEntryFeatureConverter();
         converter.convertFeature(features, document);
 
@@ -106,9 +109,12 @@ class UniProtKBEntryFeatureConverterTest {
                         "ChEBI-CHEBI:29180",
                         "nucleotidyl-adenosine residue",
                         "ChEBI-CHEBI:83071",
+                        "description",
                         "BINDING",
                         "tRNA(Thr)");
         assertEquals(new HashSet<>(chainValue), document.featuresMap.get("ft_binding"));
+        assertFalse(document.featuresMap.containsKey("ft_binding_exp"));
+        assertFalse(document.evidenceExperimental);
 
         assertTrue(document.featureEvidenceMap.containsKey("ftev_binding"));
         List<String> chainEvidenceValue = Arrays.asList("manual", "ECO_0000255");
@@ -120,7 +126,7 @@ class UniProtKBEntryFeatureConverterTest {
         assertEquals(
                 new HashSet<>(bindingLengthValue), document.featureLengthMap.get("ftlen_binding"));
 
-        assertEquals(8, document.content.size());
+        assertEquals(9, document.content.size());
         assertEquals(
                 new HashSet<>(
                         List.of(
@@ -128,6 +134,121 @@ class UniProtKBEntryFeatureConverterTest {
                                 "CHEBI:29180",
                                 "CHEBI:83071",
                                 "ChEBI-CHEBI:29180",
+                                "nucleotidyl-adenosine residue",
+                                "ChEBI-CHEBI:83071",
+                                "description",
+                                "BINDING",
+                                "tRNA(Thr)")),
+                document.content);
+
+        assertEquals(
+                Collections.singletonList(ProteinsWith.BINDING_SITE.getValue()),
+                document.proteinsWith);
+        assertTrue(document.crossRefs.isEmpty());
+        assertTrue(document.databases.isEmpty());
+    }
+
+    @Test
+    void convertImplicitExperimentalFeature() {
+        UniProtDocument document = new UniProtDocument();
+        document.reviewed = true;
+
+        List<Evidence> evidences = new ArrayList<>();
+        List<UniProtKBFeature> features = List.of(createBindingFeature("description", evidences));
+        UniProtEntryFeatureConverter converter = new UniProtEntryFeatureConverter();
+
+        converter.convertFeature(features, document);
+
+        assertTrue(document.featuresMap.containsKey("ft_binding"));
+        List<String> chainValue =
+                List.of(
+                        "A1",
+                        "CHEBI:29180",
+                        "CHEBI:83071",
+                        "ChEBI-CHEBI:29180",
+                        "nucleotidyl-adenosine residue",
+                        "ChEBI-CHEBI:83071",
+                        "description",
+                        "BINDING",
+                        "tRNA(Thr)");
+        assertEquals(new HashSet<>(chainValue), document.featuresMap.get("ft_binding"));
+        assertEquals(new HashSet<>(chainValue), document.featuresMap.get("ft_binding_exp"));
+        assertTrue(document.evidenceExperimental);
+
+        assertTrue(document.featureEvidenceMap.containsKey("ftev_binding"));
+        assertEquals(Set.of("experimental"), document.featureEvidenceMap.get("ftev_binding"));
+
+        assertTrue(document.featureLengthMap.containsKey("ftlen_binding"));
+        List<Integer> bindingLengthValue = Collections.singletonList(12);
+        assertEquals(
+                new HashSet<>(bindingLengthValue), document.featureLengthMap.get("ftlen_binding"));
+
+        assertEquals(9, document.content.size());
+        assertEquals(
+                new HashSet<>(
+                        List.of(
+                                "A1",
+                                "CHEBI:29180",
+                                "CHEBI:83071",
+                                "ChEBI-CHEBI:29180",
+                                "nucleotidyl-adenosine residue",
+                                "ChEBI-CHEBI:83071",
+                                "description",
+                                "BINDING",
+                                "tRNA(Thr)")),
+                document.content);
+
+        assertEquals(
+                Collections.singletonList(ProteinsWith.BINDING_SITE.getValue()),
+                document.proteinsWith);
+        assertTrue(document.crossRefs.isEmpty());
+        assertTrue(document.databases.isEmpty());
+    }
+
+    @Test
+    void convertWithoutImplicitExperimentalFeatureByDescription() {
+        UniProtDocument document = new UniProtDocument();
+        document.reviewed = true;
+
+        List<Evidence> evidences = new ArrayList<>();
+        List<UniProtKBFeature> features = List.of(createBindingFeature("(Probable).", evidences));
+        UniProtEntryFeatureConverter converter = new UniProtEntryFeatureConverter();
+
+        converter.convertFeature(features, document);
+
+        assertTrue(document.featuresMap.containsKey("ft_binding"));
+        List<String> chainValue =
+                List.of(
+                        "A1",
+                        "CHEBI:29180",
+                        "CHEBI:83071",
+                        "ChEBI-CHEBI:29180",
+                        "(Probable).",
+                        "nucleotidyl-adenosine residue",
+                        "ChEBI-CHEBI:83071",
+                        "BINDING",
+                        "tRNA(Thr)");
+        assertEquals(new HashSet<>(chainValue), document.featuresMap.get("ft_binding"));
+        assertFalse(document.featuresMap.containsKey("ft_binding_exp"));
+        assertFalse(document.evidenceExperimental);
+
+        assertTrue(document.featureEvidenceMap.containsKey("ftev_binding"));
+        assertTrue(document.featureEvidenceMap.get("ftev_binding").isEmpty());
+
+        assertTrue(document.featureLengthMap.containsKey("ftlen_binding"));
+        List<Integer> bindingLengthValue = Collections.singletonList(12);
+        assertEquals(
+                new HashSet<>(bindingLengthValue), document.featureLengthMap.get("ftlen_binding"));
+
+        assertEquals(9, document.content.size());
+        assertEquals(
+                new HashSet<>(
+                        List.of(
+                                "A1",
+                                "CHEBI:29180",
+                                "CHEBI:83071",
+                                "ChEBI-CHEBI:29180",
+                                "(Probable).",
                                 "nucleotidyl-adenosine residue",
                                 "ChEBI-CHEBI:83071",
                                 "BINDING",
@@ -141,7 +262,57 @@ class UniProtKBEntryFeatureConverterTest {
         assertTrue(document.databases.isEmpty());
     }
 
+    @Test
+    void convertExperimentalFeature() {
+        UniProtDocument document = new UniProtDocument();
+
+        List<Evidence> evidences = new ArrayList<>();
+        evidences.add(createEvidence(EvidenceCode.ECO_0000269));
+        List<UniProtKBFeature> features = List.of(getFeature(evidences));
+        UniProtEntryFeatureConverter converter = new UniProtEntryFeatureConverter();
+
+        converter.convertFeature(features, document);
+
+        assertTrue(document.featuresMap.containsKey("ft_chain"));
+        assertTrue(document.featuresMap.containsKey("ft_chain_exp"));
+        assertTrue(document.evidenceExperimental);
+        Set<String> chainValue =
+                Set.of("CHAIN", "FT12345", "dbSNP-DBSNP-12345", "description value", "DBSNP-12345");
+        assertEquals(chainValue, document.featuresMap.get("ft_chain"));
+        assertEquals(chainValue, document.featuresMap.get("ft_chain_exp"));
+
+        assertTrue(document.featureEvidenceMap.containsKey("ftev_chain"));
+        List<String> chainEvidenceValue = Arrays.asList("experimental", "manual", "ECO_0000269");
+        assertEquals(
+                new HashSet<>(chainEvidenceValue), document.featureEvidenceMap.get("ftev_chain"));
+
+        assertTrue(document.featureLengthMap.containsKey("ftlen_chain"));
+        List<Integer> chainLengthValue = Collections.singletonList(7);
+        assertEquals(new HashSet<>(chainLengthValue), document.featureLengthMap.get("ftlen_chain"));
+
+        assertEquals(5, document.content.size());
+        assertEquals(
+                new HashSet<>(
+                        Arrays.asList(
+                                "CHAIN",
+                                "FT12345",
+                                "dbSNP-DBSNP-12345",
+                                "description value",
+                                "DBSNP-12345")),
+                document.content);
+
+        assertEquals(Collections.singletonList(14), document.proteinsWith);
+        assertEquals(Set.of("dbsnp"), document.databases);
+        assertEquals(Set.of("dbSNP-DBSNP-12345", "DBSNP-12345"), document.crossRefs);
+    }
+
     private static UniProtKBFeature getFeature() {
+        List<Evidence> evidences =
+                Collections.singletonList(createEvidence(EvidenceCode.ECO_0000255));
+        return getFeature(evidences);
+    }
+
+    private static UniProtKBFeature getFeature(List<Evidence> evidences) {
         AlternativeSequence alternativeSequence =
                 new AlternativeSequenceBuilder()
                         .original("original value")
@@ -155,7 +326,6 @@ class UniProtKBEntryFeatureConverterTest {
                         .build();
 
         FeatureLocation location = new FeatureLocation(2, 8);
-        List<Evidence> evidences = Collections.singletonList(createEvidence());
         return new UniProtKBFeatureBuilder()
                 .type(UniprotKBFeatureType.CHAIN)
                 .alternativeSequence(alternativeSequence)
@@ -167,7 +337,7 @@ class UniProtKBEntryFeatureConverterTest {
                 .build();
     }
 
-    private UniProtKBFeature createBindingFeature() {
+    private UniProtKBFeature createBindingFeature(String description, List<Evidence> evidences) {
         LigandPart ligandPart =
                 createLigandPart("nucleotidyl-adenosine residue", "ChEBI:CHEBI:83071", null, null);
 
@@ -185,8 +355,9 @@ class UniProtKBEntryFeatureConverterTest {
 
         return new UniProtKBFeatureBuilder()
                 .type(UniprotKBFeatureType.BINDING)
+                .description(description)
                 .location(new FeatureLocation(23, 34))
-                .evidencesAdd(createEvidence())
+                .evidencesSet(evidences)
                 .ligand(ligand)
                 .ligandPart(ligandPart)
                 .featureCrossReferenceAdd(xref1)
@@ -202,9 +373,9 @@ class UniProtKBEntryFeatureConverterTest {
         return new LigandPartBuilder().name(name).id(id).label(label).note(note).build();
     }
 
-    private static Evidence createEvidence() {
+    private static Evidence createEvidence(EvidenceCode evidenceCode) {
         return new EvidenceBuilder()
-                .evidenceCode(EvidenceCode.ECO_0000255)
+                .evidenceCode(evidenceCode)
                 .databaseName("PROSITE-ProRule")
                 .databaseId("PRU10020")
                 .build();
